Fixed alignment issue between header and main. Deleted empty selector in CSS

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ button:hover {
   background-image: url("/images/bg.gif");
   background-repeat: repeat-x;
   display: flex;
+  width: 100vw;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -344,8 +345,6 @@ main {
   max-width: 511px;
 }
 
-.main__content__blog__article:first-of-type {
-}
 .main__content__blog__article h2 {
   color: var(--clr-primary-600);
   font-size: 2rem;
